<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkChecker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="notification_title">Dead phone!</string>
    <string name="notification_message">Network is gone. Reboot your phone!</string>
    <string name="notification">Notification</string>
    <string name="notification_on">Notification enabled</string>
    <string name="notification_off">Notification disabled</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Notification sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_summary_on">Dont\'t vibrate, when network dies</string>
    <string name="vibrate_summary_off">Vibrate, when network dies</string>
    <string name="notification_period">Notification period</string>
    <string name="notification_period_summary">Time between notifications</string>
    <string name="info_message">Looks like your network is down. Try rebooting your phone to fix it.</string>
    <string name="snooze">Snooze</string>

</resources>
